Fix dark mode

--- a/src/components/FeaturedTitleWithText/styles.module.css
+++ b/src/components/FeaturedTitleWithText/styles.module.css
@@ -1,5 +1,14 @@
+
+:root {
+  --background-image: url('/img/hero-header-dots.webp'); /* Default light mode image */
+}
+
+[data-theme='dark'] {
+  --background-image: url('/img/hero-header-dots-dark.webp'); /* Dark mode image */
+}
+
 .leftColumn {
-  background-image: url(/img/hero-header-dots.webp);
+  background-image: var(--background-image);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
